Fixed alignment issue in Product table

--- a/web/html/src/branding/css/base/setup-wizard.less
+++ b/web/html/src/branding/css/base/setup-wizard.less
@@ -247,6 +247,10 @@ ul.product-list {
         margin: 0 auto;
       }
     }
+
+    .calc-width {
+      width: calc(100% - 27em);
+    }
   }
   li.list-row-odd {
     .row-odd;
